Updated Implementation as Suggested.